--- a/app/admin/view/common/public.html
+++ b/app/admin/view/common/public.html
@@ -40,10 +40,10 @@
                     <a href="/admin">名称管理</a>
                 </li>
                 <li class="layui-nav-item {if condition="$item == 'model'"}layui-this{/if}">
-                    <a href="admin/model">型号管理</a>
+                    <a href="/admin/model">型号管理</a>
                 </li>
-                <li class="layui-nav-item">
-                    <a href="">规格管理</a>
+                <li class="layui-nav-item {if condition="$item == 'size'"}layui-this{/if}">
+                    <a href="/admin/size">规格管理</a>
                 </li>
                 <li class="layui-nav-item">
                     <a href="">材料管理</a>
