--- a/app/home/view/index/index.html
+++ b/app/home/view/index/index.html
@@ -74,7 +74,7 @@
                 </el-form-item>
             </el-form>
 
-            <el-table height="250" border style="width: 100%">
+            <el-table  border style="width: 100%">
                 <el-table-column prop="name" label="材料名称"></el-table-column>
                 <el-table-column prop="name" label="材料单价（元/kg）"></el-table-column>
                 <el-table-column prop="name" label="材料用量（kg/千米）"></el-table-column>
