--- a/app/admin/view/common/public.html
+++ b/app/admin/view/common/public.html
@@ -45,8 +45,8 @@
                 <li class="layui-nav-item {if condition="$item == 'size'"}layui-this{/if}">
                     <a href="/admin/size">规格管理</a>
                 </li>
-                <li class="layui-nav-item">
-                    <a href="">材料管理</a>
+                <li class="layui-nav-item {if condition="$item == 'material'"}layui-this{/if}">
+                    <a href="/admin/material">材料管理</a>
                 </li>
                 <li class="layui-nav-item">
                     <a href="">数据管理</a>
