--- a/app/admin/view/index/material.html
+++ b/app/admin/view/index/material.html
@@ -167,13 +167,13 @@
             let nameId = $(this).attr('nameId')
             let model_name = $(this).attr('model_name')
             let element = $('.alertBox').html();
-
             layer.open({
-                title: "修改型号信息",
+                title: "修改材料信息",
                 type: 1,
                 skin: 'layui-layer-demo', //样式类名
                 closeBtn: 1,
                 anim: 2,
+                area: ['500px', '580px'],
                 shadeClose: false,
                 content: element,
                 success: function() {
@@ -254,7 +254,6 @@
                 }
             })
         });
-
     });
 </script>
 {/block}
